20220705:
 * fixes for remembered selections
 * added --skip-remembered-selections to "cm run script"

20220704:
 * fixed a bug with searching for scripts with variations
 * added the possibilty to update deps from pre/post processing
 * added --extra-cache-tags and --name for "cm run script"
 * added prototype of selection caching

20220701:
 * added dummy "cm test script"
 * added "--env" to "cm show cache" to show env and state
 * added "cm show cache"

20220629:
 * added "detect_version_using_script" in script used to detect python packages
 * major fix to properly support multiple scripts with the same tags, caching, selection, etc
 * fixed a bug in version comparison (converting string to int)
 * added recording of "version" to cache meta

20220628:
 * fixed local_env with deps

20220623:
 * important update of versions logic

20220621:
 * added support for --quiet
 * changed CM_NEED_VERSION to CM_VERSION
 * added CM_VERSION_MIN, CM_VERSION_MAX
 * added cm compare_versions utils --version1=... --version2=...
 * added support to detect min/max/correct versions

20220617
 * fixed logic to handle variations (-_): https://github.com/mlcommons/ck/issues/243

20220616:
 * changed "cached" to "cache" automation

20220615:
 * major update of script (remove parallel env/new_env and state/new_state).
   keep global env & state and detect changes automatically
 * major simplification of "script"
 * removed "installed" to be more understandable
 * added "cached" to be more understandable

20220609:
 * added "versions" key to the CM script meta
   it works similar to "variations" and is forced by --version
 * changed "ic" to "script" in "experiment" automation

20220608:
 * updated "variations" logic in "script"!
   meta['default_variation'] (str): only one of many
   meta['default_variations'] (list): multiple choices

 * deprecated "ic" automation. Use "script" instead!

20220607:
 * added strip_folders to utils/unzip_file
 * fixed minor bugs in CM script

20220606: